force-app/main/default/objects/Cubico_Cluster_City_Maps__mdt/Cubico_Cluster_City_Maps__mdt.object-meta.xml
<CustomObject>
    <label>Cubico Cluster City Map</label>
    <pluralLabel>Cubico Cluster City Maps</pluralLabel>
</CustomObject>