force-app/main/default/objects/Cubico_Cluster_City_Maps__mdt/fields/City_List__c.field-meta.xml
<CustomField>
    <fullName>City_List__c</fullName>
    <label>City List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>