force-app/main/default/objects/Cubico_Cluster_City_Maps__mdt/fields/Cluster_Type__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Type__c</fullName>
    <label>Cluster Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>