force-app/main/default/objects/Cubico_Cluster_City_Maps__mdt/fields/Showroom_Id__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Id__c</fullName>
    <label>Showroom Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>